--- a/compose.yml
+++ b/compose.yml
@@ -6,14 +6,13 @@ x-lockdown: &lockdown
   # prevents any process within the container to gain more privileges
   security_opt:
     - "no-new-privileges=true"
-    
+
 services:
   socket-proxy:
-    # this image is used to expose the docker socket as read-only to traefik
-    # you can check https://github.com/11notes/docker-socket-proxy for all details
-    image: "11notes/socket-proxy:2.1.3"
+    # detailed info about this image: https://github.com/11notes/docker-socket-proxy
+    image: "11notes/socket-proxy:2.1.6"
     <<: *lockdown
-    user: "0:108" 
+    user: "0:0"
     environment:
       TZ: "Europe/Zurich"
     volumes:
@@ -48,7 +47,7 @@ services:
       - "traefik.http.middlewares.default-ipallowlist-RFC1918.ipallowlist.sourcerange=10.0.0.0/8,172.16.0.0/12,192.168.0.0/16"
 
       # example on how to secure the traefik dashboard and api
-      - "traefik.http.routers.dashboard.rule=Host(`${TRAEFIK_FQDN}`)"
+      - "traefik.http.routers.dashboard.rule=Host(`${FQDN_TRAEFIK}`)"
       - "traefik.http.routers.dashboard.service=api@internal"
       - "traefik.http.routers.dashboard.middlewares=dashboard-auth"
       - "traefik.http.routers.dashboard.entrypoints=https"
@@ -95,6 +94,7 @@ services:
       - "--entrypoints.https.http.middlewares=default-errors,default-ratelimit,default-ipallowlist-RFC1918,default-csp"
       # disable upstream HTTPS certificate checks (https > https)
       - "--serversTransport.insecureSkipVerify=true"
+      # plugins example
       - "--experimental.plugins.rewriteResponseHeaders.moduleName=github.com/jamesmcroft/traefik-plugin-rewrite-response-headers"
       - "--experimental.plugins.rewriteResponseHeaders.version=v1.1.2"
       - "--experimental.plugins.geoblock.moduleName=github.com/PascalMinder/geoblock"
@@ -106,6 +106,10 @@ services:
       - "--entrypoints.https.http.tls.certresolver=porkbun"
       - "--entrypoints.https.http.tls.domains[0].main=${DOMAIN0}"
       - "--entrypoints.https.http.tls.domains[0].sans=*.${DOMAIN0}"
+      # enable metrics
+      - "--entrypoints.metrics.address=:8899"
+      - "--metrics.prometheus=true"
+      - "--metrics.prometheus.entryPoint=metrics"
     ports:
       - "80:80/tcp"
       - "443:443/tcp"
@@ -128,27 +132,55 @@ services:
     <<: *lockdown
     labels:
       - "traefik.enable=true"
-      - "traefik.http.services.default-errors.loadbalancer.server.port=8080"
+      - "traefik.http.services.default-errors.loadbalancer.server.port=3000"
     environment:
       TZ: "Europe/Zurich"
     networks:
       backend:
     restart: "always"
 
-  # example container
-  nginx:
-    image: "11notes/nginx:stable"
+  prometheus:
+    # detailed info about this image: https://github.com/11notes/docker-prometheus
+    depends_on:
+      traefik:
+        condition: "service_healthy"
+        restart: true
+    image: "11notes/prometheus:3.6.0"
     <<: *lockdown
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.nginx-example.rule=Host(`${NGINX_FQDN}`)"
-      - "traefik.http.routers.nginx-example.entrypoints=https"
-      - "traefik.http.routers.nginx-example.service=nginx-example"
-      - "traefik.http.services.nginx-example.loadbalancer.server.port=3000"
-    tmpfs:
-      # needed for read_only: true
-      - "/nginx/cache:uid=1000,gid=1000"
-      - "/nginx/run:uid=1000,gid=1000"
+      - "traefik.http.routers.prometheus.rule=Host(`${FQDN_PROMETHEUS}`)"
+      - "traefik.http.routers.prometheus.entrypoints=https"
+      - "traefik.http.routers.prometheus.service=prometheus"
+      - "traefik.http.services.prometheus.loadbalancer.server.port=3000"
+    environment:
+      TZ: "Europe/Zurich"
+      PROMETHEUS_CONFIG: |-
+        global:
+          scrape_interval: 15s
+
+        scrape_configs:
+          - job_name: "traefik"
+            static_configs:
+              - targets: ["traefik:8899"]
+    volumes:
+      - "prometheus.etc:/prometheus/etc"
+      - "prometheus.var:/prometheus/var"
+    networks:
+      backend:
+    restart: "always"
+
+  whoami:
+    image: "traefik/whoami"
+    <<: *lockdown
+    command:
+      - "--port=3000"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.whoami.rule=Host(`${FQDN_WHOAMI}`)"
+      - "traefik.http.routers.whoami.entrypoints=https"
+      - "traefik.http.routers.whoami.service=whoami"
+      - "traefik.http.services.whoami.loadbalancer.server.port=3000"
     networks:
       backend:
     restart: "always"
@@ -157,6 +189,8 @@ volumes:
   var:
   plugins:
   socket-proxy.run:
+  prometheus.etc:
+  prometheus.var:
 
 networks:
   frontend:
