docs: demo containers

--- a/compose.yml
+++ b/compose.yml
@@ -9,7 +9,8 @@ x-lockdown: &lockdown
 
 services:
   socket-proxy:
-    # detailed info about this image: https://github.com/11notes/docker-socket-proxy
+    # for more information about this image checkout:
+    # https://github.com/11notes/docker-socket-proxy
     image: "11notes/socket-proxy:2.1.6"
     <<: *lockdown
     user: "0:0"
@@ -140,7 +141,8 @@ services:
     restart: "always"
 
   prometheus:
-    # detailed info about this image: https://github.com/11notes/docker-prometheus
+    # for more information about this image checkout:
+    # https://github.com/11notes/docker-prometheus
     depends_on:
       traefik:
         condition: "service_healthy"
@@ -169,6 +171,11 @@ services:
     networks:
       backend:
     restart: "always"
+
+  # ╔═════════════════════════════════════════════════════╗
+  # ║     DEMO CONTAINER - DO NOT USE IN PRODUCTION!      ║
+  # ╚═════════════════════════════════════════════════════╝
+  # used to create and endpoint with more infos about clients
 
   whoami:
     image: "traefik/whoami"
