cut: testing output

--- a/.github/workflows/org.update.yml
+++ b/.github/workflows/org.update.yml
@@ -80,8 +80,6 @@ jobs:
                 core.setFailed(e);
               }
 
-              core.info(inspect(job, {showHidden:false, depth:null, colors:true}));
-
               // semver
               const latest = semver.valid(semver.coerce(job.inputs.version));
               const current = semver.valid(semver.coerce(job.json.semver.version));
@@ -139,7 +137,7 @@ jobs:
           git tag -a v${{ env.LATEST_TAG }} -m "v${{ env.LATEST_TAG }}" ${SHA256}
           git push --follow-tags
 
-      - name: update / build docker image
+      - name: update / build container image
         if: env.WORKFLOW_UPDATE == 'true' && steps.checkout.outcome == 'success'
         uses: the-actions-org/workflow-dispatch@3133c5d135c7dbe4be4f9793872b6ef331b53bc7
         with:
