--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -33,3 +33,35 @@ jobs:
           workflow: org.update.yml
           token: "${{ secrets.REPOSITORY_TOKEN }}"
           inputs: '{ "etc":"${{ env.WORKFLOW_UPDATE_BASE64JSON }}" }'
+
+
+  update-v2:
+    runs-on: ubuntu-latest
+
+    permissions:
+      actions: read
+      contents: write
+
+    steps:
+      - name: get latest version of branch v2
+        run: |
+          VERSION="null"
+          for PAGE in {0..10}; do
+            V2=$(curl -s https://api.github.com/repos/traefik/traefik/tags?page=${PAGE} | jq -r ['.[].name | select(test("^v2")) '][0] | sed 's/v//')
+            if [ "${V2}" != "null" ]; then
+              if ! curl -kILs --fail https://hub.docker.com/v2/repositories/11notes/traefik/tags/${V2}; then
+                VERSION="${V2}"
+                break
+              fi
+            fi
+          done
+          echo "LATEST_VERSION_V2=${VERSION}" >> "${GITHUB_ENV}"
+
+      - name: cron-update / build docker image
+        if: env.LATEST_VERSION_V2 != 'null'
+        uses: the-actions-org/workflow-dispatch@3133c5d135c7dbe4be4f9793872b6ef331b53bc7
+        with:
+          workflow: version.yml
+          wait-for-completion: false
+          token: "${{ secrets.REPOSITORY_TOKEN }}"
+          inputs: '{ "version":"${{ env.LATEST_VERSION_V2 }}" }'
