--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -61,7 +61,7 @@ jobs:
         if: env.LATEST_VERSION_V2 != 'null'
         uses: the-actions-org/workflow-dispatch@3133c5d135c7dbe4be4f9793872b6ef331b53bc7
         with:
-          workflow: version.yml
+          workflow: org.version.yml
           wait-for-completion: false
           token: "${{ secrets.REPOSITORY_TOKEN }}"
           inputs: '{ "version":"${{ env.LATEST_VERSION_V2 }}" }'
